--- a/forms.html
+++ b/forms.html
@@ -4,18 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="forms.css">
 </head>
 <body>
-    <form action="example.com/path" method="post">
-        <label for="first_name">First Name:</label>
-        <input type="text" id="first_name" placeholder="Bob..." name="first_name">
-        <label for="user_email">Email Address</label>
-        <input type="email" id="user_email" name="email" placeholder="">
-        <label for="user_password">password</label>
-        <input type="password" id="user_password" name="password">
-        <label for="dob">Date of Birth</label>
-        <input type="date" name="dob" id="dob">
-        <textarea rows="20" cols="60" >Some Intial Content</textarea>
+    <div id="image"><img src="leaves.jpg" alt=""></div>
+    <form action="">
+        <div id="text">
+            <p>This is not a real online service! You know you need something like this in your life 
+                to help you realize your deepest dreams. Sign up <span>now</span> to get </p>
+            <p>You <span>know</span> you want to.</p>
+        </div>
+        <div id="form">
+            <p id="heading">lets DO this</p>
+     <div id="input_section">
+        <div id="sectionOne">
+            
+                <div class="inputs">
+                    <label for="first_name">FIRST NAME</label>
+                    <input type="text" placeholder="first name" required id="first_name" name="first_name">
+                </div>
+                <div class="inputs">
+                    <label for="user_email">EMAIL</label>
+                    <input type="email" id="user_email" name="user_email" required>
+                </div>
+                <div class="inputs">
+                    <label for="user_password">PASSWORD</label>
+                    <input type="password" min="5" id="user_password" name="user_password" required>
+                </div>
+        </div>
+            <div id="sectionTwo">
+                <div class="inputs">
+                    <label for="last_name">LAST NAME</label>
+                    <input type="text" id="last_name" name="last_name" required >
+                </div>
+                <div class="inputs">
+                    <label for="phone_number">Phone Number</label>
+                    <input type="tel" id="phone_number" name="phone_number" required>
+                </div >
+                <div class="inputs">
+                    <label for="confirm_password">Confirm Password</label>
+                    <input type="password" id="confirm_password" name="confirm_password">
+                </div>
+           </div>
+        </div>
+    </div>
+        <footer>
+            <button>Create Account</button>
+        </footer>
     </form>
 </body>
 </html>
